fix layout issues with menu icon and drop down positioning

--- a/src/components/topnav/topnav.module.css
+++ b/src/components/topnav/topnav.module.css
@@ -22,7 +22,8 @@
     color: rgb(176, 176, 177);
 }
 .menuToggle {
-    display: flex;
+    position: relative;
+    display: grid;
     justify-content: flex-end;  
     align-items: center;
     width: 100%;                
@@ -33,18 +34,15 @@
     height: 40px;
     display: flex;
     width: fit-content;
-    justify-self: end;          
+    justify-self: end; 
+    z-index: 5;         
 }
 .NavLinks{
-    position: relative;
-    display: flex;
     justify-content: end;
     flex: 2;
-
     gap: 5px;
 }
 .navButton{
-
     align-self: center;
     transform: scale(1);
     transition: .3s ease ;
@@ -59,12 +57,13 @@
 
 
 .isPhone{
-    display: flex;
-    flex-direction: column;
+    display: grid;
     background-color: rgb(238, 236, 236);
-    position: absolute;
-    top: 100px;
-    left: 0px;
+    position: fixed;
+    justify-self: center;
+    top: 82px;
+    left: 0;
+    right:  0;
     z-index: 1;
 
 }
@@ -75,5 +74,11 @@
 @media (max-width: 768px){
     .title{
         align-self: center;
+    }
+    .homeBtn{
+        display: grid;
+    }
+    .menuToggle{
+        width: 100%;
     }
 }
